# RAG

./: .env.example  .gitignore  EVAL_PLAN.md  README.md  SPEC.md  pyproject.toml  requirements-eval.txt  requirements.txt
app/: api.py
data/kb/tb/: SOURCES.md
data/sample/: handbook.md
docs/: architecture.mmd
eval/: README.md  __init__.py  gen_testset.py  metrics.py  run_eval.py  settings.py  testset.jsonl
eval/results/20260624-202903/: per_question.csv  summary.csv  summary.md
eval/results/20260625-194143/: per_question.csv  summary.csv  summary.md
eval/results/20260625-203002/: per_question.csv  summary.csv  summary.md
eval/results/20260625-205038/: per_question.csv  summary.csv  summary.md
eval/results/20260626-201023/: per_question.csv  summary.csv  summary.md
rag/: __init__.py  config.py  factory.py  models.py  pipeline.py
rag/documents/: __init__.py  loader.py
rag/embeddings/: __init__.py  base.py  local.py  openai_compat.py
rag/generation/: __init__.py  generator.py
rag/llm/: __init__.py  base.py  factory.py  openai_compat.py  structured.py
rag/reranker/: __init__.py  base.py  cross_encoder.py  noop.py
rag/retrievers/: __init__.py  base.py  hybrid.py  pageindex.py  vector.py
tests/: conftest.py  test_eval_metrics.py  test_ingest_endpoint.py  test_loader.py  test_pageindex_tree.py  test_pipeline_smoke.py  test_reranker.py
web/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  api.js  styles.css
web/src/components/: Chat.jsx  Header.jsx  IngestBar.jsx  Message.jsx  Settings.jsx
