[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-system"
version = "0.1.0"
description = "Generic RAG system with three retrieval modes: vector, PageIndex, hybrid"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pypdf>=4.2",
    "chromadb>=0.5",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Evaluation harness (eval/). Mirrors requirements-eval.txt.
# langchain pinned to the 0.3 line: ragas still imports a langchain_community
# module that langchain v1 (>=0.4 community) removed. See requirements-eval.txt.
eval = [
    "ragas>=0.2,<0.3",
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
    "datasets>=2.19",
    "pandas>=2.0",
    "rapidfuzz>=3.0",
]

[tool.setuptools.packages.find]
include = ["rag*", "app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
